# serializer version: 1
# name: test_nested_spans
  list([
    dict({
      'attributes': dict({
        'code.filepath': 'example/src/lib.rs',
        'code.lineno': 48,
        'code.namespace': 'example_module',
      }),
      'id': 'span_0',
      'name': 'inner_span',
      'parent_id': 'span_1',
    }),
    dict({
      'attributes': dict({
        'code.filepath': 'example/src/lib.rs',
        'code.lineno': 45,
        'code.namespace': 'example_module',
      }),
      'id': 'span_1',
      'name': 'outer_span',
      'parent_id': 'span_2',
    }),
    dict({
      'attributes': dict({
      }),
      'id': 'span_2',
      'name': 'python-parent',
      'parent_id': None,
    }),
  ])
# ---
# name: test_traced_function
  list([
    dict({
      'attributes': dict({
        'code.filepath': 'example/src/lib.rs',
        'code.lineno': 33,
        'code.namespace': 'example_module',
      }),
      'id': 'span_0',
      'name': 'do_work',
      'parent_id': 'span_1',
    }),
    dict({
      'attributes': dict({
      }),
      'id': 'span_2',
      'name': 'python-parent',
      'parent_id': None,
    }),
    dict({
      'attributes': dict({
        'code.filepath': 'example/src/lib.rs',
        'code.lineno': 22,
        'code.namespace': 'example_module',
      }),
      'id': 'span_1',
      'name': 'traced_function_inner',
      'parent_id': 'span_2',
    }),
  ])
# ---
# name: test_traced_with_attributes
  list([
    dict({
      'attributes': dict({
        'code.filepath': 'example/src/lib.rs',
        'code.lineno': 62,
        'code.namespace': 'example_module',
        'count': '3',
        'name': 'test-request',
      }),
      'id': 'span_0',
      'name': 'process_request',
      'parent_id': 'span_1',
    }),
    dict({
      'attributes': dict({
      }),
      'id': 'span_1',
      'name': 'python-parent',
      'parent_id': None,
    }),
  ])
# ---
